Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.1-pre1 - unreleased

5.4.0 - released 1-Feb-04

	Tom Collins
	- Update configure with correct location of vlimits.default.
	- Fix typo (ammount) in vmoddomlimits. [882884]
	- Don't include $(DESTDIR) when building vpopmailbindir. [884247]
	- Mention compatability issues with older SMTP AUTH patches. 
	  [882351]

5.4.0-rc2 - released 19-Jan-04

	Michael Bowe
	- Added some basic 5.4 upgrade notes to the UGPRADE file
	- Fix typo's in configure.in that relate to the errors generated
	  when a discontinued configure option is used
	- Fix bug when autocreating a user dir for a user who exists
	  in the auth backend, but does not yet have a user dir 
	  allocated. [873007] 
	- Fix bug introduced in vpopmail-5.4.0-pre2 that was preventing
	  ~vpopmail/etc/vpopmail.mysql from being installed [874776]
	- vpopbull was failing to create userdirs in some cases
	  (when the user exists in the auth backend, but did not have
	  a dir allocated yet) [816942]
	- clearopensmtp was using USE_MYSQL rather than USE_SQL to 
	  determine where the roaming IPs were being stored [876016]
	- Update INSTALL and other guides to mention that vchkpw group
	  does not need to be gid 89. [877154]
	- Update README.pgsql to include security warning regarding
	  the postgres username/password [879124]

	Ken Nonaka
	- Fixes to vpgsql.c to clear compile errors when 
	  --enable-ip-alias-domains is enabled. [874066] 

	Tom Collins
	- Check for comments earlier in deliver_mail().
	- Remove unused --enable-defaultquota and code related to it.
	  (Replaced by settings in vlimits.default.) [869411]
	- Remove references to --eanble-defaultquota in documentation.
	- vdelivermail.c: Consistent return values in deliver_mail().
	- More updates to build files. [874831]
	- Apply patch from http://www.fehcom.de/qmail/smtpauth.html